Downgrade JDK from JDK 17 to JDK 8